# MAS

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile
backend/app/: agents.py  ingest_qdrant.py  main.py  memory.py
data/: File_A.txt  File_B.txt
frontend/: Dockerfile  app.py
postgres/: init.sql
scripts/: ingest_qdrant.py
